[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
    "pytest-benchmark[histogram]",
]

[tool.flit.metadata]
module = "simtk"
author = "Matt McCormick"
author-email = "matt.mccormick@kitware.com"
home-page = "https://github.com/sim-reconstruction/simtk"
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires=[
    "itk>=5.2rc1",
    "numpy",
    "scipy",
    "pydra",
    "xarray",
    "zarr",
]
requires-python=">=3.7"


[tool.flit.metadata.urls]
Documentation = "https://github.com/sim-reconstruction/simtk"

[tool.black]
line-length = 88
